logs/98593b04-a7a5-4b92-9335-8b82c1780db2.log
File "/home/rio/PycharmProjects/BISK_RFv3/extras/sort_faces_by_detset.py", line 274
print("❌ All detection sizes were skipped due to low GPU memory.")
^
IndentationError: expected an indented block after 'if' statement on line 273
✅ Script completed.
